--- a/css/apresentacao.css
+++ b/css/apresentacao.css
@@ -1,59 +1,105 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100;400&family=Open+Sans:ital@1&display=swap');
-
+:root{
+    --cor-principal:#000000;
+    --cor-secundaria:#f6f6f6;
+    --cor-terciaria:#22d4fd;
+    --cor-hover:#272727;
+    --cor-quartearia:#33d51a;
+}
 body{
-    margin: 10%;
-    height: 100vh;
-    box-sizing: border-box;
-    background-color: black;
-    color: #f6f6f6;
-}
-.titulo_destaque{
-    color: #22d4fd;
-}
-p{
-    font-weight: bold;
+    background-color: var(--cor-principal);
+    box-sizing: border-box;    
 }
 .apresentacao{
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-.apresentacao__conteudo{
-    width: 615px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
     
 }
+.apresentacao__conteudo{
+    width: 615x;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+
+.titulo_destaque{
+    color: var(--cor-quartearia);
+}
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
-    font-size: 'Montserrat', sans-serif;
+    color: var(--cor-secundaria);
 }
 .apresentacao__conteudo__texto{
-    font-size: 18px;
-    font-family:  'Montserrat', sans-serif;
+    color: var(--cor-secundaria);
 
+}
+.apresentacao__conteudo__texto  li{
+    font-size: 15px;
+    margin-bottom: 4%;
+    
+    }
+.apresentacao__conteudo__texto  a{
+text-decoration: none;
+color: var(--cor-quartearia);
+}
+
+
+
+.apresentacao__conteudo__titulo{
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
+}
+.apresentacao__conteudo__texto{
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
 }
 .apresentacao__links{
     display: flex;
+    align-items: center;
+    gap: 32px;
+    margin-right: 40%;
     justify-content: space-between;
 }
-.apresentacao__links__link{
 
-    background-color: #22d4fd;
-    width: 280px;
-    text-align: center;
-    border-radius: 16px;
+.apresentacao__links__link{
+    display: flex;
     font-size: 24px;
-    padding: 21.5px 0;
-    color: black;
+    color: var(--cor-secundaria);
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-
+    margin-right: 2%;
 
 }
-img{
-    border-radius: 15px;
+.apresentacao__links__link :hover{
+    color: var(--cor-quartearia);
+
 }
+
+.icones{
+    max-width: 20%;
+    max-height: 20%;
+    margin-right: 20px;
+    
+}
+
+
+.programador{
+    border-radius: 10%;
+}
+
+.rodape {
+    padding: 2%;
+    color:var(--cor-secundaria);
+    background-color: var(--cor-hover);
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    width: 100%;
+    height: 5%;
+    
+  
+  }
 
