--- a/css/apresentacao.css
+++ b/css/apresentacao.css
@@ -12,17 +12,17 @@ body{
 }
 .apresentacao{
     padding: 5% 15%;
-    gap: 30px;
+    gap: 1.8rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     
 }
 .apresentacao__conteudo{
-    width: 615x;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.8rem;
 }
 
 
@@ -34,10 +34,9 @@ body{
 }
 .apresentacao__conteudo__texto{
     color: var(--cor-secundaria);
-
 }
 .apresentacao__conteudo__texto  li{
-    font-size: 15px;
+    font-size: 1rem;
     margin-bottom: 4%;
     
     }
@@ -49,11 +48,11 @@ color: var(--cor-quartearia);
 
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: 'Krona One', sans-serif;
 }
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
 }
 .apresentacao__links{
@@ -61,8 +60,8 @@ color: var(--cor-quartearia);
     align-items: center;
     margin-right: 40%;
     justify-content: space-between;
-    gap: 50px;
-    margin-top: 10px;
+    gap: 3.125rem;
+    margin-top: 0.625rem;
 }
 
 .apresentacao__links__link:hover{
@@ -73,13 +72,13 @@ color: var(--cor-quartearia);
     color: var(--cor-secundaria);
     display: flex;
     justify-content: start;
-    margin-top: 10px;
+    margin-top: 0.625rem;
     color: var(--cor-quartearia);
 
 }
 .apresentacao__links__link{
     display: flex;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: var(--cor-secundaria);
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
@@ -92,7 +91,7 @@ color: var(--cor-quartearia);
 .icones{
     max-width: 20%;
     max-height: 20%;
-    margin-right: 20px;
+    margin-right: 1.25rem;
     
 }
 
@@ -117,9 +116,13 @@ color: var(--cor-quartearia);
 @media(max-width: 1200px){
     .apresentacao{
         flex-direction: column-reverse;
-        padding: 5%;
+        padding: 8%;
     }
     .apresentacao__conteudo{
-        width: auto;
+        width: 160px;
     }
+    .apresentacao__conteudo__texto{
+        width: 150px;
+    }
+  
 }
