--- a/css/apresentacao.css
+++ b/css/apresentacao.css
@@ -62,6 +62,7 @@ color: var(--cor-quartearia);
     justify-content: space-between;
     gap: 3.125rem;
     margin-top: 0.625rem;
+    
 }
 
 .apresentacao__links__link:hover{
@@ -117,6 +118,10 @@ color: var(--cor-quartearia);
     .apresentacao{
         flex-direction: column-reverse;
         padding: 8%;
+    }
+
+    .apresentacao__links{
+        flex-wrap: wrap;
     }
     .apresentacao__conteudo{
         width: 160px;
