--- a/css/projeto.css
+++ b/css/projeto.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100;400&family=Open+Sans:ital@1&display=swap');
 
-.cabecalho{
-    display: flex;
 
-}
 .projeto{
     margin-top: 10px;
     display: flex;
@@ -11,6 +8,7 @@
     margin-bottom: 90px;
     padding: 8%;
     gap: 20px;
+    
 }
 .preco{
     width: 1000px;
@@ -23,16 +21,23 @@
 .div-preco{
     color: white;
     display: flex;
+    gap: 20px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    gap: 5px;
+
 
 }
 
 .div-producao{
     color: white;
     display: flex;
+    gap: 20px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    gap: 5px;
 
 }
 
